metadata/objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Copies__c</fullName>
        <label>Available Copies</label>
        <summaryFilterItems>
            <field>Book_Copy__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Book_Copy__c.Book__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Available_Date__c</fullName>
        <label>Available Date</label>
        <summarizedField>Book_Copy__c.Available_date__c</summarizedField>
        <summaryForeignKey>Book_Copy__c.Book__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ISBN__c</fullName>
        <label>ISBN</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <label>Publisher</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Copies__c</fullName>
        <label>Total Copies</label>
        <summaryForeignKey>Book_Copy__c.Book__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Author__c</columns>
        <columns>Publisher__c</columns>
        <columns>Total_Copies__c</columns>
        <columns>Available_Copies__c</columns>
        <columns>Available_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>